src/app/pages/server-compare/server-compare.component.scss
.items_table {
  @apply w-full text-white;

  position: relative;
  border-collapse: collapse;

  thead {
    @apply border-b border-gray-200 border-solid bg-secondary;
    th {
      @apply text-left px-5 py-3 font-normal text-xs;
    }

    .compact-number-header-cell {
      text-align: right !important;
    }

    tr {
      th:nth-of-type(1) {
        position: sticky;
        left: 0;
        z-index: 21;
        @apply bg-secondary;
      }
    }
  }

  tbody {
    tr.section_header {
      @apply bg-secondary text-white;
      td:nth-of-type(1) {
        @apply bg-secondary;
      }
      scroll-margin-top: 10rem;
    }

    tr {
      @apply bg-primary;

      td:nth-of-type(1) {
        @apply bg-primary;
      }
    }

    tr {
      td {
        @apply px-5 py-3 text-left text-sm;
      }

      td:nth-of-type(1) {
        position: sticky;
        left: 0;
        z-index: 20;
      }
    }
  }
}

.fixed_thead {
  position: fixed;
  top: 68px;
  z-index: 40;
}

.compare_table_holder {
  -ms-overflow-style: none;
  scrollbar-width: none;

  &::-webkit-scrollbar {
    display: none;
    width: 0;
    height: 0;
  }
}

.scrollbar_mirror_outer {
  background: #374151;
  overflow-y: hidden;
  scrollbar-width: thin;
  scrollbar-color: #34d399 #374151;

  &::-webkit-scrollbar {
    height: 11px;
  }

  &::-webkit-scrollbar-track {
    background: #374151;
  }

  &::-webkit-scrollbar-thumb {
    height: 11px;
    background-color: #34d399;
    border-radius: 3px;
    border: 0;
  }
}

.scrollbar_mirror_inner {
  height: 1px;
  margin: 0;
  padding: 0;
}

::-webkit-scrollbar {
  width: 5px; /* width of the entire scrollbar */
  height: 6px;
}

::-webkit-scrollbar-track {
  @apply bg-secondary;
}

::-webkit-scrollbar-thumb {
  height: 6px;
  background-color: #9ca3af;
  border-radius: 20px; /* roundness of the scroll thumb */
}

:host ::ng-deep .block_full_inline {
  @apply px-6 py-6 bg-transparent flex flex-col gap-4 relative overflow-hidden;
  width: calc(100%);
  min-height: 460px;
  height: 460px;
  .chart_div {
    height: 100% !important;
  }
}

:host ::ng-deep .block_full_short_inline {
  @apply px-4 py-4 bg-transparent flex flex-col gap-4 relative overflow-visible;
  width: calc(100%);
  min-height: 460px;
  height: 460px;
  .charts_div {
    @apply flex gap-4;
    .chart_div {
      @apply w-1/2;
      height: 380px;
    }
  }
}
:host ::ng-deep .block_full_short_geekbench {
  @apply px-4 py-4 bg-transparent flex flex-col gap-4 relative overflow-hidden;
  width: calc(100%);
  min-height: 460px;
  height: 500px;
  .charts_div {
    @apply flex gap-4;
    .chart_div {
      @apply w-1/2;
      height: 460px;
    }
  }
}

@media screen and (max-width: 1024px) {
  :host ::ng-deep .block_full_short_inline {
    min-height: 860px;
    height: 860px;
    .charts_div {
      flex-direction: column;
      .chart_div {
        width: 100%;
      }
    }
  }
  :host ::ng-deep .block_full_short_geekbench {
    min-height: 940px;
    height: 940px;
    .charts_div {
      flex-direction: column;
      .chart_div {
        width: 100%;
      }
    }
  }
}

.align-baseline {
  vertical-align: baseline;
}

